<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="152dp"
        android:layout_height="156dp"
        android:layout_marginStart="215dp"
        android:layout_marginTop="405dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:background="#f5f5f5"
        android:shadowColor="#f5f5f5"
        android:shadowDx="50"
        android:shadowDy="50"
        android:shadowRadius="50"
        android:text="@string/pencil_case"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="152dp"
        android:layout_height="156dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="405dp"
        android:layout_marginEnd="211dp"
        android:layout_marginBottom="100dp"
        android:background="#f5f5f5"
        android:shadowColor="#f5f5f5"
        android:shadowDx="50"
        android:shadowDy="50"
        android:shadowRadius="50"
        android:text="@string/notebook"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="435dp"
        android:layout_height="142dp"
        android:layout_weight="7"
        android:background="#A8D8EA"
        android:fontFamily="serif-monospace"
        android:lineSpacingExtra="8sp"
        android:text="@string/available_products"
        android:textAlignment="center"
        android:textColor="#393e46"
        android:textDirection="inherit"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="152dp"
        android:layout_height="156dp"
        android:layout_marginStart="215dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="475dp"
        android:background="#f5f5f5"
        android:shadowColor="#f5f5f5"
        android:shadowDx="50"
        android:shadowDy="50"
        android:shadowRadius="50"
        android:text="@string/book"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="152dp"
        android:layout_height="156dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="475dp"
        android:background="#f5f5f5"
        android:shadowColor="#f5f5f5"
        android:shadowDx="50"
        android:shadowDy="50"
        android:shadowRadius="50"
        android:text="@string/pen"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="152dp"
        android:layout_height="156dp"
        android:layout_marginStart="215dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="288dp"
        android:background="#f5f5f5"
        android:shadowColor="#f5f5f5"
        android:shadowDx="50"
        android:shadowDy="50"
        android:shadowRadius="50"
        android:text="@string/ruler"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="152dp"
        android:layout_height="156dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="211dp"
        android:layout_marginBottom="288dp"
        android:background="#f5f5f5"
        android:shadowColor="#f5f5f5"
        android:shadowDx="50"
        android:shadowDy="50"
        android:shadowRadius="50"
        android:text="@string/eraser"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="237dp"
        android:layout_marginBottom="300dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eraser"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="242dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="300dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ruler"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="242dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="489dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/book" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="237dp"
        android:layout_marginBottom="491dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pen"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="445dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="117dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/notebook"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="242dp"
        android:layout_marginTop="445dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="119dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pencilcase"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>